--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive.html">Archive</a>
      </small>
      <small>
-       &nbsp;&nbsp;&nbsp;<a href="https://portfolio.kalightortaio.com">About</a>
+       &nbsp;&nbsp;&nbsp;<a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
      </small>
    </h3>
 </header>
