--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8">
    <title>{{ page.title }} - {{ site.title }}</title>
    <link rel="stylesheet" type="text/css" href="{{ site.path }}/css/style.css" >
+   <link rel="icon" type="image/png" href="https://portfolio.kalightortaio.com/favicon.png">
 </head>
 <body>
 
