--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,10 @@
 <div class="container">
 <header class="masthead">
    <h3 class="masthead-title">
-     <a href="{{ site.url }}">{{ site.title }}</a>
+     <p>{{ site.title }}</p>
+     <small>
+        &nbsp;&nbsp;&nbsp;<a href="{{ site.url }}">Home</a>
+     </small>
      <small>
         &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive.html">Archive</a>
      </small>
