--- a/css/style.scss
+++ b/css/style.scss
@@ -233,3 +233,13 @@ table {
 .post-date {
   color: $post-date-color;  
 }
+
+/////////////////////////////////
+/// Custom
+.logo-name {
+  font-family "Agustina Regular";
+  font weight: 700;
+  padding: 0 10px;
+  font-size: 1.5em;
+  line-height: normal;
+}
