--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 <div class="container">
 <header class="masthead">
    <h3 class="masthead-title">
-     <p>{{ site.title }}</p>
+     <span class="logo-name">{{ site.title }}</span>
      <small>
         &nbsp;&nbsp;&nbsp;<a href="{{ site.url }}">Home</a>
      </small>
