--- a/css/style.scss
+++ b/css/style.scss
@@ -237,7 +237,7 @@ table {
 /////////////////////////////////
 /// Custom
 .logo-name {
-  font-family "Agustina Regular";
+  font-family: "Agustina Regular";
   font weight: 700;
   padding: 0 10px;
   font-size: 1.5em;
