--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
 <div class="container">
 <header class="masthead">
    <h3 class="masthead-title">
-     {{ site.title }}&emsp;&emsp;&emsp;
+     {{ site.title }}
      <small>
-        &nbsp;&nbsp;&nbsp;<a href="{{ site.url }}">Home</a>
+        &emsp;&emsp;&emsp;<a href="{{ site.url }}">Home</a>
      </small>
      <small>
         &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive.html">Archive</a>
