--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,16 +11,24 @@
 <div class="container">
 <header class="masthead">
    <h3 class="masthead-title">
-     {{ site.title }}
-     <small>
-        &emsp;&emsp;&emsp;<a href="{{ site.url }}">Home</a>
-     </small>
-     <small>
-        &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive.html">Archive</a>
-     </small>
-     <small>
-       &nbsp;&nbsp;&nbsp;<a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
-     </small>
+      <div>
+      <span> &lt;</span>
+      <span class="logo-name">
+         Krishna Kokatay
+      </span>
+      <span>/&gt;</span>
+      </div>
+      <div>
+      <small>
+         <a href="{{ site.url }}">Home</a>
+      </small>
+      <small>
+         <a href="{{ site.path }}/archive.html">Archive</a>
+      </small>
+      <small>
+         <a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
+      </small>
+      </div>
    </h3>
 </header>
 
