--- a/css/style.scss
+++ b/css/style.scss
@@ -205,6 +205,25 @@ table {
   }
 }
 
+.masthead-title .logo-name {
+   font-family: "Agustina Regular";
+   font-weight: bold;
+   padding: 0 10px;
+}
+
+.masthead-title .logo {
+  display: block;
+  float: left;
+  font-size: 1.5em;
+  text-decoration: none;
+  margin-top: 10px;
+  line-height: normal;
+}
+
+.masthead-title .menu {
+  display: block;
+  float: right;
+}
 
 //////////////////////////
 // Posts
