--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,14 @@
 <div class="container">
 <header class="masthead">
    <h3 class="masthead-title">
-      <div>
+      <div class="logo">
       <span> &lt;</span>
       <span class="logo-name">
          Krishna Kokatay
       </span>
       <span>/&gt;</span>
       </div>
-      <div>
+      <div class="menu">
       <small>
          <a href="{{ site.url }}">Home</a>
       </small>
