--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,13 @@
 
 @import 'settings';
 
+@font-face {
+    font-family: "Agustina Regular";
+    font-style: normal;
+    font-weight: normal;
+    src: local("Agustina Regular"),
+        url("./fonts/Agustina.woff") format("woff");
+}
 
 html {
   font-family: $font-family;
