--- a/css/style.scss
+++ b/css/style.scss
@@ -208,7 +208,9 @@ table {
       font-size: 75%;
       font-weight: 400;
       letter-spacing: 0;
-    }
+      padding-left: 1vw;
+      paddint-right: 1vw;
+     }
   }
 }
 
