--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@
     font-style: normal;
     font-weight: normal;
     src: local("Agustina Regular"),
-        url("./assets/fonts/Agustina.woff") format("woff");
+        url("../assets/fonts/Agustina.woff") format("woff");
 }
 
 html {
