--- a/css/style.scss
+++ b/css/style.scss
@@ -7,13 +7,7 @@
 
 @import 'settings';
 
-@font-face {
-    font-family: "Agustina Regular";
-    font-style: normal;
-    font-weight: normal;
-    src: local("Agustina Regular"),
-        url("../assets/fonts/Agustina.woff") format("woff");
-}
+@import url(https://portfolio.kalightortaio.com/static/media/Agustina.eb0c59dd.woff);
 
 html {
   font-family: $font-family;
