--- a/css/style.scss
+++ b/css/style.scss
@@ -209,7 +209,6 @@ table {
       font-size: 100%;
       font-weight: 400;
       letter-spacing: 0;
-      padding-left: 1.4vw;
      }
   }
 }
@@ -223,10 +222,10 @@ table {
 .masthead-title .logo {
   display: block;
   float: left;
-  font-size: 1.5em;
   text-decoration: none;
   margin-top: 10px;
   line-height: normal;
+  padding-right: 50px;
 }
 
 //////////////////////////
