--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,21 +12,23 @@
 <header class="masthead">
    <h3 class="masthead-title">
       <div class="logo">
-      <span> &lt;</span>
-      <span class="logo-name">
-         Krishna Kokatay
-      </span>
-      <span>/&gt;</span>
+         <span> &lt;</span>
+         <span class="logo-name">
+            Krishna Kokatay
+         </span>
+         <span>/&gt;</span>
       </div>
-      <small>
-         <a href="{{ site.url }}">Home</a>
-      </small>
-      <small>
-         <a href="{{ site.path }}/archive.html">Archive</a>
-      </small>
-      <small>
-         <a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
-      </small>
+      <div class="menu">
+         <small>
+            <a href="{{ site.url }}">Home</a>
+         </small>
+         <small>
+            <a href="{{ site.path }}/archive.html">Archive</a>
+         </small>
+         <small>
+            <a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
+         </small>
+      </div>
    </h3>
 </header>
 
