--- a/css/style.scss
+++ b/css/style.scss
@@ -204,13 +204,6 @@ table {
       color: $masthead-color;
     }
     
-    small {
-      color: $masthead-small-color;
-      font-size: 100%;
-      font-weight: 400;
-      letter-spacing: 0;
-    }
-     
     .logo-name {
       font-family: "Agustina Regular";
       font-weight: bold;
@@ -227,8 +220,22 @@ table {
     }
      
     .menu {
-      text-align: center;    
-    }
+        text-align:justify;
+        color: $masthead-small-color;
+        font-size: 100%;
+        font-weight: 400;
+        letter-spacing: 0;
+     }
+     
+    .menu:after { 
+        content:' '; 
+        display:inline-block; 
+        width: 100%; height: 0 
+     }
+     
+    .menu > span {
+        display:inline-block
+     } 
   }
 }
 
