--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,15 +19,15 @@
          <span>/&gt;</span>
       </div>
       <div class="menu">
-         <small>
+         <span>
             <a href="{{ site.url }}">Home</a>
-         </small>
-         <small>
+         </span>
+         <span>
             <a href="{{ site.path }}/archive.html">Archive</a>
-         </small>
-         <small>
+         </span>
+         <span>
             <a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
-         </small>
+         </span>
       </div>
    </h3>
 </header>
