--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,13 +19,13 @@
             </span>
             <span>/&gt;</span>
          </div>
-         <span>
+         <span class="menu-item">
             <a href="{{ site.url }}">Home</a>
          </span>
-         <span>
+         <span class="menu-item">
             <a href="{{ site.path }}/archive.html">Archive</a>
          </span>
-         <span>
+         <span class="menu-item">
             <a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
          </span>
       </div>
