--- a/css/style.scss
+++ b/css/style.scss
@@ -225,7 +225,7 @@ table {
         justify-content: space-between; 
      }
      
-    .menu-items {
+    .menu-item {
         display:inline-block;
         color: $masthead-small-color;
         font-size: 100%;
