--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             <a href="{{ site.path }}/archive.html">Archive</a>
          </span>
          <span class="menu-item">
-            <a href="https://github.com/Kalightortaio/blog.kalightortaio.com" target="_blank">About</a>
+            <a href="https://github.com/Kalightortaio" target="_blank">About</a>
          </span>
       </div>
    </h3>
